======================== v2.0.0

- added OAuth2
- added Users into the eshop
- added banners into the eshop
- added CodeMirror editor into the CMS
- updated CMS editor
- most of admin windows are centered to middle
- some bug fixes

======================== v1.0.3

- added support for galleries and one gallery widget for example (CMS)
- CMS editor: image cropper supports new attributes (`data-size="50%"` for resizing cropped image, helpful for image galleries)
- updated file handler in `/controllers/default.js` supports percentual resizing of pictures

======================== v1.0.2

- added data stats manager/orders-products-pages
- updated footer text
- updated styles

======================== v1.0.1

- added replace category in manager/products
- better manager interface for `Pages`
- updated image cropper (added image dimension)
- fixed problem with HTML tidy
- fixed case sensitive URL address for manager